<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".EtkinlikBir">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp">

        <TableLayout
            android:id="@+id/tablo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/baslikTextView"
                style="@style/Headings"
                android:text="@string/baslik"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Headings.Normal"
                    android:layout_weight="1"
                    android:text="@string/soru1"/>
                <EditText
                    android:id="@+id/adVeri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Headings.Normal"
                    android:layout_weight="1"
                    android:text="@string/soru2"/>
                <EditText
                    android:id="@+id/soyadVeri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:inputType="textPersonName"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Headings.Normal"
                    android:layout_weight="1"
                    android:text="@string/soru3"/>
                <EditText
                    android:id="@+id/yasVeri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:inputType="number"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Headings.Normal"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/soru4"/>

                <RadioGroup
                    android:id="@+id/buttons"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="9"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/erkekButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/erkekCinsiyet"/>

                    <RadioButton
                        android:id="@+id/kadinButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/kadinCinsiyet"/>

                </RadioGroup>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/Headings.Normal"
                    android:layout_weight="1"
                    android:text="@string/soru5"/>

                <EditText
                    android:id="@+id/iletiVeri"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_above="@+id/dugmeler"
                    android:layout_below="@+id/tablo"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="9"
                    android:inputType="textMultiLine" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/dugmeler"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/gonderDugme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="gonder_tikla"
            android:text="@string/gonder" />

        <Button
            android:id="@+id/temizleDugme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="temizle_tikla"
            android:text="@string/temizle" />
    </LinearLayout>

</RelativeLayout>
